# linkedin-mcp-server

./: .dockerignore  .gitignore  DOCKER_RELEASE_STRATEGY.md  Dockerfile  Dockerfile.alpine  Dockerfile.minimal  Dockerfile.runtime  FEATURE_REQUEST_SUMMARY.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.5.0.md  RESILIENT_SETUP.md  STEALTH_PROFILE_README.md  benchmark_stealth_performance.py  current_selector_analysis.md  distribution-strategy.md  docker-entrypoint.sh  pyproject.docker.toml  pyproject.runtime.toml  pyproject.toml  run_linkedin_mcp.sh  run_linkedin_mcp_http.sh  run_linkedin_mcp_resilient.sh  test_error_compatibility.py  test_profile_scraper.py  test_stealth_manager.py  validate_docker_runtime.sh  validate_runtime.py
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md
PRPs/: CSS_SELECTOR_VALIDATION_MAIN_PAGE_SCRAPING.md  INITIAL.md  aggressive-performance-optimization.md  centralized_stealth_architecture_redesign.md  centralized_stealth_architecture_redesign_FINAL.md  css_selector_validation_main_page_scraping_prp.md  mcp-server-tools-status-analysis.md  remove-playwright-dependency.md
PRPs/templates/: prp_base.md
linkedin_mcp_server/: __init__.py  cli.py  cli_main.py  cli_main.py.backup  error_handler.py  exceptions.py  logging_config.py  server.py  setup.py
linkedin_mcp_server/config/: loaders.py  providers.py  schema.py
linkedin_mcp_server/debug/: __init__.py  logger.py
linkedin_mcp_server/scraper/: config.py  session.py
testdata/: testscrape.txt
tests/: __init__.py
(+55 files in other folders)
