[project]
name = "linkedin-mcp-server"
version = "1.5.0"
description = "Optimized LinkedIn MCP Server"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.1",
    "inquirer>=3.4.0",
    "keyring>=25.6.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.13.0",
    "pyperclip>=1.9.0",
    "patchright>=1.55.0",
    "fake-useragent>=1.4.0",
    "keyrings-alt>=5.0.2",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "aiohttp>=3.12.13",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
    "ty>=0.0.1a12",
]
